alien (8.87) UNRELEASED; urgency=low

  * Use lsb-rpmbuild, not lsb-rpm. Closes: #667044

 -- Joey Hess <joeyh@debian.org>  Wed, 04 Apr 2012 13:34:26 -0400

alien (8.86) unstable; urgency=low

  * Filter out illegal characters in version number when building a deb.
    Closes: #648531

 -- Joey Hess <joeyh@debian.org>  Sat, 12 Nov 2011 13:12:35 -0400

alien (8.85) unstable; urgency=low

  * Avoid breaking on spaces in filenames. Closes: #618636

 -- Joey Hess <joeyh@debian.org>  Sun, 19 Jun 2011 15:43:49 -0400

alien (8.84) unstable; urgency=low

  * Silence error message when deleting build tree after making an rpm,
    if rpmbuild has already deleted it. Closes: #622846
  * Squash an uninitialized value when creating a deb.

 -- Joey Hess <joeyh@debian.org>  Fri, 15 Apr 2011 14:13:20 -0400

alien (8.83) unstable; urgency=low

  * Correct handling of arch all packages in deb arch check. Closes: #596209

 -- Joey Hess <joeyh@debian.org>  Thu, 09 Sep 2010 08:24:58 -0400

alien (8.82) unstable; urgency=low

  * Use debhelper compat level v7 when building packages. All changes
    since v4 seem safe for alien's generated rules files.
  * Use dh_prep instead of deprecated dh_clean -k.
  * Print a nice error message when attempting to build a deb from a package
    of an unsupported architecture. Closes: #592625

 -- Joey Hess <joeyh@debian.org>  Mon, 30 Aug 2010 17:04:24 -0400

alien (8.81) unstable; urgency=low

  * Avoid uninitialized value warning when debian/rules fails to run
    due to alien being run in a noexec directory. Closes: #579216
  * Prevent DESTROY stomping on alien's exit code sometimes.
  * Support extracting lzma compressed RPMs. 
    (Patch by unnamed person on some bug tracking system I don't frequent.)
  * Suggest lzma. If not installed, alien will still fail to decompress
    RPMs using it, but will support most rpms, which are not.
  * Fix precedence problem that prevented alien from preserving permissions